--- a/_units/10.md
+++ b/_units/10.md
@@ -50,8 +50,11 @@ Some quotes on expectancy, expectation, and anticipation:
 Here is an example of three different conditions of expectancy in music. Listen to the following three clips of music. Which one sounds the most expected? Which one sounds most unexpected?
 
 <audio controls src="/MUTOR/assets/audios/unit10_Cmandemo.wav"> </audio>
+
 <audio controls src="/MUTOR/assets/audios/unit10_CmaD3emo.wav"> </audio>
+
 <audio controls src="/MUTOR/assets/audios/unit10_CmaD5emo.wav"> </audio>
+
 {% include img-figure url="/MUTOR/assets/audios/unit10_Cmandemo.wav" description="Cmajor normal" %}
 {% include img-figure url="/MUTOR/assets/audios/unit10_CmaD3demo.wav" description="Cmajor normal" %}
 {% include img-figure url="/MUTOR/assets/audios/unit10_CmanD5emo.wav" description="Cmajor normal" %}
@@ -97,13 +100,11 @@ The word "socks" at the end of the sentence is a violation of expectations. Your
 Expectations also play a strong role in our perception and cognition of music. When listening to music, one necessarily forms expectations for sounds that are about to occur next. Consider the following example: 
  
 What would you expect to hear next?
-    <audio controls src="/MUTOR/assets/audios/unit10_twinkle1.mp3">
-    <audio controls src="/MUTOR/assets/audios/unit10_twinkle2.mp3">
-    <audio controls src="/MUTOR/assets/audios/unit10_twinkle3.mp3">
-    <audio controls src="/MUTOR/assets/audios/unit10_twinkle4.mp3">
-      Your browser does not support the audio element.
-    </audio>
-    <p>Demo Normal Hearing vs. High-Frequency Hearing loss</p>
+1.   <audio controls src="/MUTOR/assets/audios/unit10_twinkle1.mp3"></audio>
+1.   <audio controls src="/MUTOR/assets/audios/unit10_twinkle2.mp3"></audio>
+1.   <audio controls src="/MUTOR/assets/audios/unit10_twinkle3.mp3"></audio>
+1.   <audio controls src="/MUTOR/assets/audios/unit10_twinkle4.mp3"></audio>
+    
 1. {% include img-figure url="/MUTOR/assets/audios/unit10_twinkle1.mp3" description="Cmajor normal" %}
 1. {% include img-figure url="/MUTOR/assets/audios/unit10_twinkle2.mp3" description="Twinkle2 normal" %}
 1. {% include img-figure url="/MUTOR/assets/audios/unit10_twinkle3.mp3" description="Twinkle3 normal" %}
