--- a/_units/07.md
+++ b/_units/07.md
@@ -87,8 +87,7 @@ With respect to rhythm, performances of music are often considered cold and lack
 
 mechanical timing
 
-<!-- how do I post audio files? -->
-{% include img-figure url="/MUTOR/assets/audios/traumerei_scoretime.mp3" description="Straumerei_scoretime.mp3" %} 
+<audio controls src="/MUTOR/assets/audios/traumerei_scoretime.mp3"> </audio>
 
 expressive timing
 
