--- a/_units/07.md
+++ b/_units/07.md
@@ -91,7 +91,7 @@ mechanical timing
 
 expressive timing
 
-{% include img-figure url="/MUTOR/assets/audios/Schumann%20-%20Traumerei%20-%20Horowitz.mp3" description="Schumann%20-%20Traumerei%20-%20Horowitz.mp3" %} 
+<audio controls src="/MUTOR/assets/audios/Schumann%20-%20Traumerei%20-%20Horowitz.mp3" description="Schumann%20-%20Traumerei%20-%20Horowitz.mp3"> </audio>
 
 
 (source: Penel & Drake, 2000. Rhythm in music performance and perceived structure. In Desain & Windsor, Ed.)
