update units 1 and 4

--- a/_units/01.md
+++ b/_units/01.md
@@ -7,11 +7,10 @@ title: The Auditory Stimulus
 number: 1
 short_description: Introduction to the physics of sound and its mathematical 
   and digital representation.
-summary: What we experience as sound is really a response to small variations 
-  in pressure that affect our inner ear. In this unit, we will discuss the 
-  physical properties of these pressure waves and how they propagate through 
-  a medium (air). We will also discuss the mathematical and digital 
-  representations of these waves.
+summary: Sound is a complex perceptual phenomenon related to variations 
+  in pressure caused by some event in the world. In this unit, we have discussed
+  some fundamental aspects of the auditory stimulus, as well as a number of
+  ways in which it is represented.
 authors: 
 - John MacCallum
 topics: [Physics of Sound and its Representation]
@@ -72,6 +71,7 @@ sound waves, and the ways we represent them.
 %} {% assign fig_waveform=fignum %}
 {% endcomment %}
 
+{% include begin-figure description="A waveform" %}
 {% include begin-audio-example %}
 {% include audio-buffer name="mybuf" src="/MUTOR/assets/audios/trombone.mp3" %}
 {% include audio-player name="player" buffer="mybuf" %}
@@ -87,6 +87,8 @@ sound waves, and the ways we represent them.
 {% include audio-transport name="transport" %}
 </td></tr></table>
 {% include end-audio-example %}
+{% include end-figure %}
+{% capture fig_waveform %}{{ fignum }}{% endcapture %}
 
 The image in figure {{ fig_waveform }} may be a familiar
 one---we might say we see a sound there, but it would be more accurate
@@ -174,6 +176,8 @@ Let's take a closer look at the details of a time-domain waveform.
 
 ## Time Domain Representations of Signals
 
+### Frequency
+
 {% include begin-figure description="A sine wave." %} 
 <img src="/MUTOR/assets/images/sin-amp-period.png" alt="A sine wave" 
 style="width: 100%;">
@@ -184,7 +188,8 @@ In figure {{ fig_sin }}, we see a special waveform called a *sine wave*.
 A sine wave is special because it is *periodic*, meaning that its shape
 repeats over and over again. The amount of time it takes for it to repeat
 is called its *period*, and the number of periods that occur in one 
-second is called its *frequency*. A sine wave is a plot of the position
+unit of time, say a second, is called its *frequency*. 
+A sine wave is a plot of the position
 along the y-axis of a point as it travels counter-clockwise around a 
 unit circle, starting from the point (1, 0).
 {% include img-figure url="/MUTOR/assets/images/Sine.gif" 
@@ -195,10 +200,20 @@ unit circle, starting from the point (1, 0).
 As we mentioned above, the physical property *amplitude* is related the 
 perceptual experience of *loudness*. Additionally, the *frequency* of this
 sine wave is related to the perceptual experience of *pitch*, with 
-higher frequencies and shorter periods correlating to higher pitches.
+higher frequencies and shorter periods correlating to higher 
+*sounding* notes or pitches.
 
-The last property of this waveform is the *phase*. The phase is the position
+### Phase
+The phase is the position
 in the period relative to some point that we determine to be the beginning.
+The phase tells us how much of the periodic waveform has elapsed, and 
+consequently, how much will have to occur before the waveform repeats.
+Since phase is a representation of something that repeats or loops
+over and over again, we can think of it as a point traveling around 
+a circle, and indeed, 
+phase is usually represented as an angle expressed in degress
+($0--360^{\circ}$) or in radians ($0--2\pi$). 
+
 A *cosine wave* appears exactly the same as a sine wave, shifted $1/4$
 of a period to the left.
 {% include img-figure url="/MUTOR/assets/images/sin-cos-90phase.png" 
@@ -215,6 +230,65 @@ $1/4$ of a period, and that corresponds to our point having traveled
 $1/4$ of the way around the circle, or $90^{\circ}$, we can say that 
 the two have a phase difference of $90^{\circ}$.
 
+#### How Does Phase Affect Sound?
+
+If a sine wave and a cosine wave are identical with the exception of
+a time shift, they should sound identical, right? Well they do, but that 
+doesn't mean that phase isn't important, but its affect on sound is 
+not always intuitive. For a sinusoid by it self, it is impossible to hear
+any difference, no matter where it started in its cycle. 
+When two sinusoids are added together, the relationship of their 
+phase and frequency determine how they sound. When they have the same
+frequency and phase, the result is a sinusoid with an amplitude 
+equal to the sum of the two. But when the phase of one of them is
+exactly half that of the other, the two cancel each other out and produce
+a flat waveform of 0 amplitude. Try shifting the phase of one sinusoid
+against another in the example below.
+
+{% include begin-figure description="Two sinusoids, one with variable phase
+with respect to the other." %}
+{% include note author="jm" text="need a simple example here with a single
+slider to move the phase of one sine tone with respect to the other." %}
+{% include end-figure %}
+
+You might notice a subtle change in pitch when you move the slider quickly---
+this is because a shift in phase requires the waveform to "jump" forward
+(or backward) faster (or slower) than it would have normally, and that
+change in the speed of the evolution of the waveform is a temporary 
+change in frequency.
+
+In the figure below we have a more complex example containing 
+four sinusoids of different frequencies. The phases can be randomized,
+but the frequencies stay the same. Note that although the waveform
+changes dramatically when the phases change, the *sound* doesn't change
+much. This is important, because it tells us that while the time-domain
+representation of a sound is certainly important, it does not often
+tell us much about how a signal will actually *sound*. Below, we will
+look at another representation of signals, the *frequency-domain*, but
+before that, let's look at more complex waveforms.
+
+{% include begin-figure description="Changes in phase do not always produce
+changes in our perception of a sound." %}
+{% include note author="jm" text="This should be the does phase matter? demo" %}
+{% include end-figure %}
+{% capture does_phase_matter %}{{ fignum }}{% endcapture %}
+
+### Summary
+
+We have been looking at different *representations* of sounds, and
+before moving on, we should be clear how these relate to the physical
+phenomena they describe. The time-domain representation of a signal
+can be thought of as representing changes in intensity that propagate 
+through some medium, and the path through different media 
+from some event in the world to your brain is a complex one: 
+objects collide to produce fluctuations in air pressure, which enter 
+your ear and are transferred through bone, fluid, hair cells, and finally
+into the electrical signals of your nervous system. The 2-D drawings above
+could just as easily represent any of these, just as they could also represent
+the voltage as a function of time that moves a speaker cone back and forth
+(that produces changes in air pressure), the displacement of that speaker cone,
+etc.
+
 <!--
 Periodic and quasi-periodic signals
 
@@ -227,20 +301,134 @@ Correlate these to physical phenomena (speaker cone, for example)
 
 # Pure and Complex Sounds
 
-## Pure Sounds
+So far, we have been looking at simple, "pure" waveforms, i.e. signals
+that can be characterized as having only a single frequency or pitch.
+When we add simple sounds together, as we did in figure
+{{ does_phase_matter }}, we produce *complex* sounds. The configuration
+of the different frequency components relative to one another account for
+much of the ways in which we experience *timbre* or the *tone color* of 
+a sound, that is, the thing that makes a clarinet sound like a clarinet and
+a piano sound like a piano (more on this in unit 
+{% include note author="jm" text="need a way to refer to units..." %}).
 
-## Complex Sounds
+When pure tones with frequencies that are integer multiples of some 
+frequency are added together, we say that they are in a *harmonic* relationship;
+all other sounds are said to be *inharmonic*. 
 
-## Noise
+In reality, all sounds are complex---there are no truely pure sounds. 
+The sinusoids we discussed above are only theoretical, and any physical 
+representation of them contains other frequency components, no matter how small,
+that distort their shape to some degree due to nonlinearities in the media
+that carry them. Consider air, for example, which is not at a uniform temperature
+and humidity everywhere. 
+Since sound travels at a speed that is dependent upon temperature and
+humidity, small changes in the air produce small changes that manifest as
+*distortion* or *noise*.
 
-# Frequency Domain Representations of Sound
+# Frequency Domain Representations of Signals
 
+As we saw in figure {{ does_phase_matter }}, the time-domain representation
+of a signal is useful for certain things, but getting a sense of the 
+frequency content by looking at it can be misleading.
+
+## Fourier Transform
+
+We can move from the time-domain into the *frequency-domain* through
+a transformation of the signal known as the 
+[*Fourier Transform*](https://en.wikipedia.org/wiki/Fourier_transform), after
+[Joseph Fourier](https://en.wikipedia.org/wiki/Joseph_Fourier).
+The Fourier Transform (FT) is a function that takes a time-domain 
+signal as its input and produces a function of frequency as its output:
+\begin{equation}
+F(t)=\int_{-\infty}^{\infty}f(t)e^{-i2\pi xt}dt
+\label{eq:fouriertransform}
+\end{equation}
+where $f(t)$ is our time-domain function, and $F(t)$ is our frequency-domain
+function.
+
+You might note those infinity signs above and below the integral symbol---
+indeed, from the perspective of the FT, a *periodic* signal can only be 
+considered periodic if it is periodic forever! Since we can't wait that long
+to compute the FT, we can use the Discrete Fourier Transform (DFT), which is
+a computation-friendly version of the continuous FT (sometimes you'll 
+hear people refer to the FFT which stands for the Fast Fourier Transform---
+this is simply a particular *algorithm* for computing the DFT):
+
+\begin{equation}
+X(k)=\sum^{N-1}_{n=0}x(n)e^{-i2\pi\frac{kn}{N}}
+\label{eq:dft}
+\end{equation}
+
+This may or may not look familiar, but just bear with me. $x(n)$ is our
+digitally-sampled time-domain signal, and $X(k)$ is the resulting 
+frequency-domain representation of it. $e^{-i2\pi\frac{kn}{N}}$ can
+be rewritten using the (trigonometric) $sin$ and $cosine$ functions:
+\begin{equation}
+e^{-i2\pi\frac{kn}{N}} = \cos\left(2\pi \frac{kn}{N}\right) - i \sin\left(2\pi \frac{kn}{N}\right)
+\label{eq:trig}
+\end{equation}
+So, when we rewrite the DFT in its less compact form:
+\begin{equation}
+X(k)=\sum^{N-1}_{n=0}x(n)\left[ \cos\left(2\pi \frac{kn}{N}\right) - i \sin\left(2\pi \frac{kn}{N}\right) \right]
+\label{eq:dft-trig}
+\end{equation}
+we can see that what the DFT is actually doing is multiplying our original signal
+by a bunch of sineusoids of different frequencies and summing the results, giving 
+us a signal that tells us effectively "how much" of these frequencies the 
+signal "contains".
+
+How many frequencies and which ones depends on that value $N$, and is 
+up to you to decide, however, there is a tradeoff: the larger $N$ is, the more
+time it takes to collect those samples. While you get better frequency
+resolution when $N$ is large, you get poorer time resolution, and vice
+versa.
+
+An important (and incredible) property of both the FT and the DFT is that they
+are reversible without any loss of information or change to the signal: you 
+can convert fromthe time-domain to the frequency-domain and back and recover
+your original signal exactly. The inverse DFT (IDFT) 
+looks remarkably similar to the DFT:
+\begin{equation}
+X(k)=\sum^{N-1}_{n=0}x(n)e^{i2\pi\frac{kn}{N}}
+\label{eq:idft}
+\end{equation}
+(if you missed it, it's a little missing "-" sign in the exponent towards the 
+right-hand side).
+
+{% include note author="jm" text="is this too much math and / or discussion
+about the FT?" %}
+
+## Spectrum
+
+The frequency domain represention of a signal is often referred to as its
+*spectrum*. 
+
+{% include begin-figure description="The spectrum of an audio signal." %}
+{% include note author="jm" text="interactive spectrum example with 
+the ability to blend components etc" %}
+{% include end-figure %}
+
+We now have a more clear view of the frequency composition of a signal.
+Although the DFT does actually produce the phase of each component, 
+that information is often thrown away in the name of efficiency, which 
+is also a tacit statement that it is a significantly less important feature
+than the frequency information.
+
+Another representation of the spectrum over time is called a *sonogram*:
+{% include begin-figure description="A sonogram." %}
+{% include note author="jm" text="interactive sonogram ex" %}
+{% include end-figure %}
+Here, we can see a history of the spectrum over time, with the height
+representing frequency, the brightness *magnitude* (related to amplitude),
+and time along the x-axis.
+
+<!--
 Fourier transform
 
 Spectrum
 
 DFT vs Fourier transform and resolution
-
+-->
 
 
 {% include unit_postamble.md %}
