--- a/_units/04.md
+++ b/_units/04.md
@@ -12,11 +12,24 @@ observations and attempts to model them, and proceed through more modern
 understandings of sensory dissonance and its associated physiology."
 authors: 
  - John MacCallum
+ - Psyche Loui
 topics: [Consonance, Dissonance, Sensory Dissonance, Critical Bandwidth, 
 Cochlea, Basilar Membrane, Timbre, Intervals, Tonotopic Mapping]
 test_questions:
- - question 1
- - question 2
+ - Define the auditory filter. What is the relationship between critical
+   band and the Gammatone filter?
+ - Which of the following sounds most dissonant?
+   a) C4 and B4 played on pure tones
+   b) C4 and B4 played on two clarinets on the opposite sides of a stage
+   c) C4 and B4 played on two trumpets on the same side of a stage
+   d) C4 and E4 played on two clarinets on the same side of a stage
+ - Under what conditions are binaural beats most likely to be perceived?
+ - Calculate the beat frequency of the second partials $(F_2)$ of complex 
+   tones with fundamentals at 440Hz and 441Hz respectively.
+ - How does the Inferior Colliculus differentially encode pure tones and 
+   complex tones presented at a tritone apart?
+ - According to the Wright-Bregman hypothesis, what factors may influence the 
+   perception of dissonance?
 
 ###
 # page layout:
@@ -369,17 +382,137 @@ plot is greatly reduced than that of the minor second.
 
 # Top-Down Processing and Its Effect on Dissonance
 
-Kameoka and Kuriyagawa (1969) hierarchy of intervals.
+## Interval Heirarchies
+
+Our perception of dissonance is not absolute, that is to say, context matters.
+In 1968, Kameoka and Kuriyagawa demonstrated 
+{% include note author="jm" text="i need to review KK's work to say something about it..." %}.
+{% include begin-figure description="A demonstration of
+Kameoka and Kuriyagawa's hierarchy of intervals." %}
+{% include note author="jm" text="interactive demo" %}
+{% include end-figure %}
+
+{% include img-figure url="/MUTOR/assets/images/kameoka-hierarchy.png"
+description="Interval hierarchy (Kameoka and Kuriyagawa)" %}
+
+{% include note author="jm" text="probe tone here as well? the original tiddlywiki says that it is covered in another unit" %}
 
 
-# Counterpoint and the Wright-Bregman Hypothesis
+## Counterpoint and the Wright-Bregman Hypothesis
 
-# Other Factors Contributing to Roughness
+As sounds become increasingly separated into different streams 
+(where streams can refer to spatial location in this case), 
+beating diminishes and sound less rough. This explains why binaural beats 
+do not sound as rough as monaural beats. Wright and Bregman 
+{% include note author="jm" text="citation" %}
+propose that certain auditory cues such as stream segregation can prevent 
+the listener from hearing dissonant intervals as such. Figure 1 is an example 
+taken from Auditory Scene Analysis ; in the top example, although the boxed 
+intervals are dissonant, that dissonance is supressed by the strong separation 
+of the two lines into separate streams. In the bottom example, the streaming 
+cues are not present and the same intervals are heard as dissonant.
+
+{% include img-figure url="/MUTOR/assets/images/bregman-wright_20hypoth1.png"
+description="Strong segregation cues in the top example suppress the sensation of dissonance which is clearly heard in the bottom when those cues are removed." %}
+
+The separation of sounds into streams is heavily influenced by top-down 
+processes such as attention and long-term memory. Thus top-down influences 
+on perception of consonance and dissonance begins to be important at this level. 
+Referring back to Terhardt's two-component theory 
+{% include note author="jm" text="cite (Terhardt, 1977)" %}, factors 
+contributing to musical consonance (as opposed to sensory consonance) include 
+spatial localization, musical texture, and stream segregation, all of which 
+are sensitive to top-down modulations.
+
+David Huron {% include note author="jm" text="cite (2001)" %} has proposed 
+that stream segregation and related perceptual principles give rise to our 
+existing rules of counterpoint and voice-leading. Traditional voice-leading 
+practices in this view include: the use of three to four distinct voices, 
+the prominence of stepwise motion rather than leaps in each voice, and the 
+avoidance of parallel fifths and octaves. These compositional practices may 
+result from the perceptual principles of auditory streaming and source segregation. 
+In order for each individual voice to be perceived as one stream, the perceptual 
+principle of pitch proximity dictates the use of stepwise motion. 
+Additionally, for distinct voices to be perceived as separable streams, 
+frequency and amplitude comodulation are generally avoided, giving rise to 
+the avoidance of parallel motion. These are only some of the ways in which 
+compositional practices are governed by perceptual principles.
+
+## Other Factors Contributing to Roughness
+
+In addition to the interaction of two tones within close frequencies, 
+some other factors that contribute to our perception of roughness include 
+spatial location, phase-related fluctuations, and mistuning of consonant intervals.
+
+Spatial location: 
+	is important because it is a cue for the auditory system to 
+compute the difference between input to the two ears. Although beats can 
+arise monaurally from sounds mixing before they enter the ear, they can also 
+arise neurally when sounds come together within the binaural system. 
+The interaction of sounds presented binaurally results in binaural beating.
+
+Phase-related: 
+	fluctuation occurs when partials in a harmonic complex are not 
+phase-locked. When the carriers of two amplitude-modulated tones are 
+modulated in phase, the summated roughness is about twice that of either 
+of the amplitude-modulated tones alone. Summated roughness is least when the 
+modulations are anti-phase. Phase-locking is necessary for this to occur. 
+{% include note author="jm" text="cite (Terhardt, 2000)" %}
+
+Beating of mistuned consonances: 
+	is another phenomenon related to the perception 
+of roughness and beating. It is a reported phenomenon that beating is perceived 
+when two simultaneously tones are played at frequencies that deviate very 
+slightly from small-integer ratios. For example, a slightly mistuned octave will 
+beat at the frequency at which the higher tone deviates from twice the lower tone; 
+i.e. a 500Hz tone and a 1005Hz tone will beat at 5Hz 
+{% include note author="jm" text="cite (Viemeister et al., 2001)" %}.
+The origin of this phenomenon is unknown, but it is shown to be largely 
+dependent upon the level and frequency of the lower component. 
+Viemeister et al (2001) suggest that the perception of beating of mistuned 
+consonances seems to be more dependent upon the fluctuations of the amplitude 
+envelope of the two tones, rather than the fine temporal structure, or 
+information within the amplitude envelope.
 
 # Neurobiology of Consonance and Dissonance
 
-{% include note author="jm" text="check with psyche about recent work" %}
+In order to further understand the different types of top-down modulation on 
+consonance perception, it is important to understand the auditory pathway and 
+the processes acting on the neural representations of sound. Such a detailed 
+anatomical pathway is laid out in another unit, but the present discussion 
+will focus on the stages of the auditory pathway specifically related to 
+consonance and dissonance perception.
 
+Neural coding of dissonance seems to begin at the level of the auditory nerve. 
+Tramo et al. (2001) {% include note author="jm" text="cite" %} report that the 
+temporal fluctuations of the auditory nerve firing pattern are inversely 
+correlated with consonance perception. Thus it seems that the auditory 
+nerve is passing on dissonance-related information towards further levels of 
+the auditory system.
+  
+The Inferior Colliculus (IC) is a structure in the midbrain that plays an 
+important role in dissonance perception. In studies involving single-unit 
+recordings in the anesthetized cat, 
+{% include note author="jm" text="cite McKinney et al. (2003)" %} have shown that 
+neural firings of the IC correlate positively with amplitude modulation at the 
+beat frequencies resulting from the interaction of two tones. Firings at the 
+beat frequency were observed in the IC in response to simultaneously-presented 
+minor 2nd tones for both pure and complex tones. IC firings also correlated 
+with complex tones presented at a tritone apart (see the figure below). 
+These findings 
+suggest that the biological basis of dissonance between complex tones is coded 
+at the midbrain level.
 
+{% include img-figure url="/MUTOR/assets/images/icfiring.GIF"
+description="Mean rates of fluctuations of IC neurons in response to pure and complex tone pairs." %}
+
+Studies with lesion patients have also shown effects of consonance and dissonance 
+at the level of the auditory cortex. Tramo et al. (2001) 
+{% include note author="jm" text="cite" %} tested patients with 
+bilateral A1 lesions and found that pitch perception and consonance perception 
+were both impaired, but dissonance perception was intact. This led to their 
+suggestion that consonance is an emergent property of the relationship between 
+pitches of simultaneously-perceived tones, whereas dissonance is a function of 
+roughness and beating which is independent of consonance.
 
 {% include unit_postamble.md %}
