--- a/_units/11.md
+++ b/_units/11.md
@@ -52,16 +52,34 @@ Since the word "socks" is unexpected in meaning, it is incongruous with the sema
 # Prosody
 Prosody refers to the sounds of speech: the stress patterns, the pitch changes, and the rhythm within speech. These are parts of speech that are not usually written down. The prosody of speech can be appreciated when listening to low-pass filtered speech sounds, or sine wave speech [http://www.lifesci.sussex.ac.uk/home/Chris_Darwin/SWS/]. These speech samples, while not always comprehensible, bring out the prosodic elements (pitch and pitch changes, rhythm and timing content) of speech.
 
-Another aspect of speech in which prosody comes across clearly is in accents. Stress patterns and pitch patterns differ clearly between different accents, as can be seen here: [https://m.youtube.com/watch?v=3UgpfSp2t6k]. 
+Another aspect of speech in which prosody comes across clearly is in accents. Stress patterns and pitch patterns differ clearly between different accents, as can be seen here: 
+
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://m.youtube.com/watch?v=3UgpfSp2t6k" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
+picture-in-picture" allowfullscreen></iframe>
+</div>
 
 The rhythmic content of speech can be captured using the normalized Pairwise Variability Index (nPVI): the ratio between successive durations of syllables within (formula given here) [https://www.researchgate.net/profile/Hua_Lin13/publication/228773149/figure/fig3/AS:667829170892804@1536234290353/nPVI-formula_Q320.jpg]. 
 
 As in the examples, the speaker is able to manipulate her speech sound duration, the pattern of duration of different syllables, and the direction of her pitches is effective in conveying nationality or regionality, or where the speaker comes from. 
 
-In music, composers and performers may also employ certain compositional devices to convey a national or regional accent. Here is an examples of very "French-sounding" music: Debussy La Mer https://m.youtube.com/watch?v=hlR9rDJMEiQ  
+In music, composers and performers may also employ certain compositional devices to convey a national or regional accent. Here is an examples of very "French-sounding" music: Debussy La Mer  
+
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://m.youtube.com/watch?v=hlR9rDJMEiQ" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
+picture-in-picture" allowfullscreen></iframe>
+</div>
 
 Here is an example of very "English-sounding" music:
-Elgar Violin Concerto https://m.youtube.com/watch?v=9rCVW_4qwRY  
+Elgar Violin Concerto  
+
+<div style="display: block; text-align: center; float: center">
+<iframe width="560" height="315" src="https://m.youtube.com/watch?v=9rCVW_4qwRY" 
+frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
+picture-in-picture" allowfullscreen></iframe>
+</div>
 
 nPVI of English speech is higher than for French speech, because of the different syllabic structures of French and English speech. Daniele and Patel (2003) extended this result to music, and showed that the nPVI of music by English composers is higher than music by French composers.
 
