--- a/_units/11.md
+++ b/_units/11.md
@@ -55,7 +55,7 @@ Prosody refers to the sounds of speech: the stress patterns, the pitch changes, 
 Another aspect of speech in which prosody comes across clearly is in accents. Stress patterns and pitch patterns differ clearly between different accents, as can be seen here: 
 
 <div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://m.youtube.com/watch?v=3UgpfSp2t6k" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3UgpfSp2t6k" 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
 picture-in-picture" allowfullscreen></iframe>
 </div>
@@ -67,7 +67,7 @@ As in the examples, the speaker is able to manipulate her speech sound duration,
 In music, composers and performers may also employ certain compositional devices to convey a national or regional accent. Here is an examples of very "French-sounding" music: Debussy La Mer  
 
 <div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://m.youtube.com/watch?v=hlR9rDJMEiQ" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/hlR9rDJMEiQ" 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
 picture-in-picture" allowfullscreen></iframe>
 </div>
@@ -76,7 +76,7 @@ Here is an example of very "English-sounding" music:
 Elgar Violin Concerto  
 
 <div style="display: block; text-align: center; float: center">
-<iframe width="560" height="315" src="https://m.youtube.com/watch?v=9rCVW_4qwRY" 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9rCVW_4qwRY" 
 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; 
 picture-in-picture" allowfullscreen></iframe>
 </div>
