very minor change

--- a/_units/00.md
+++ b/_units/00.md
@@ -26,8 +26,11 @@ mathjax: true
 {% include unit_preamble.md %}
 
 # Research methods in music perception and cognition
-Music perception and cognition is an interdisciplinary field concerned with applying the methods of cognitive science (experimental, computational, and neurological) — to issues and problems in the study of music. 
-Ccognitive scientists use a host of methods to study perception and cognition. Every method has limitations, but different methods working together can provide powerful convergent evidence. This chapter provides an overview of the specific research methods, techniques, and experiment design considerations through which cognitive scientists explore questions about the perception and cognition of music.
+
+Music perception and cognition is an interdisciplinary field concerned with applying the methods of cognitive science (experimental, computational, and neuroscientific) — to issues and problems in the study of music. 
+Cognitive scientists use a host of methods to study perception and cognition. 
+Every method has limitations, but different methods working together can provide powerful convergent evidence to the question at hand. 
+This chapter provides an overview of the specific research methods, techniques, and experimental design considerations through which cognitive scientists explore questions about the perception and cognition of music.
 
 # Experimental psychology
 
